package ucf.assignments;

import java.util.ArrayList;
import java.util.List;

public class ItemUtil {

    static List<Item> values = new ArrayList<>();
}
